fix/PLF-7241:Wrong width of notification bar (#79)
* fix/PLF-7241:Wrong width of notification bar

* PLF-7241: fix the notification width in mozilla firefox

* Fix/PLF-7241: add requested changes

* fix/PLF-7241: add .media attributes to right location

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/skin/uiToolbarContainer/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/skin/uiToolbarContainer/Style.less
@@ -532,8 +532,6 @@
         overflow-y: auto;
     }
 	.displayItems {
-		min-width: 300px;
-		max-width: 300px;
 		overflow-x: hidden;
 		&.scroll {
 			overflow: auto;
@@ -543,6 +541,10 @@
 		}
 		.user-name{
 			color: @linkColor;
+		}
+		.media {
+			min-width: 300px;
+			max-width: 100%;
 		}
 		> li {
 			display: block;
